--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "16.8.6",
-    "react-native": "0.60.5"
+    "react-native": "0.60.5",
+    "react-native-backdrop": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
